# Blog_OS

./: .gitignore  .replit  DEPLOYMENT.md  Dockerfile  README.md  REPLIT_DEPLOYMENT.md  database_er_diagram.puml  docker-compose.yml  plan.md  pyproject.toml  replit.nix  requirements.txt
.codelf/: _changelog.md  attention.md  project.md
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: main_branch_pr.md
.github/workflows/: main-branch-pr-merge.yml  main-branch-protection.yml
apps/articles/: apps.py  search_indexes.py  signals.py
blog/: manage.py
blog/api/: urls.py
blog/api/serializers/: __init__.py  comment_serializers.py
blog/api/views/: article_views.py  comment_views.py  user_views.py
blog/apps/: __init__.py
blog/apps/articles/: admin.py  models.py  tests.py  urls.py  views.py
blog/apps/comments/: admin.py  models.py  tests.py  urls.py  views.py
blog/apps/users/: admin.py  apps.py  forms.py  models.py  permissions.py  test.py  urls.py  utils.py  views.py
blog/config/: __init__.py  asgi.py  celery_init.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
blog/static/css/: style.css
blog/templates/articles/: article_confirm_delete.html  article_form.html  detail.html  favorites.html  home.html  list.html
blog/templates/base/: base.html
blog/templates/comments/: comment.html  comment_confirm_delete.html  review_comments.html
blog/templates/github_auth/: login_success.html  redirect.html  success.html
blog/utils/: __init__.py  admin.py  models.py
docs/: API.md  DATABASE_DESIGN.md  ci_cd_workflow.md  plan.md
(+56 files in other folders)
