[project]
name = "blog-os"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==4.2.20",
    "djangorestframework>=3.14.0",
    "djangorestframework-simplejwt>=5.0",
    "markdown>=3.8",
    "pillow>=11.2.1",
    "pymysql",
]
