[project]
name = "blog-os"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==4.2.20",
    "djangorestframework>=3.14.0",
    "djangorestframework-simplejwt>=5.0",
    "markdown>=3.8",
    "pillow>=11.2.1",
    "pymysql",
    "drf-yasg>=1.21.7",
    "django-debug-toolbar>=5.2.0",
    "celery>=5.5.2",
    "redis>=6.0.0",
    "django-allauth>=65.7.0",
    "requests>=2.32.3",
    "django-elasticsearch-dsl>=8.0",
]
